test/validator/number_limits.orderly
number {10.1, 15.5};
