test/negative_cases/malformed_range.orderly
number {0.0} bogusRangeBuddy;
